fix: corregindo geração de listas não modificáveis